--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <h1 class="heading-about">About Us</h1>
             <h1 class="sub-heading1">What we mean by Modern Travel</h1>
             <div id="Parts">
-                <div class="first"><img src="/Images/Travel-Illustration.svg" alt="This is Image" class="travel-img">
+                <div class="first"><img
+                        src="https://raw.githubusercontent.com/Muhammad-Zain01/TravelAgencyWeb.github.io/c55ff923bf5f1a2d5b3045ca28cfdbe3db1a0004/Images/Travel-Illustration.svg"
+                        alt="This is Image" class="travel-img">
                 </div>
                 <div class="second">
                     <p class="text-about">Travel is all about freedom. So it makes sense that planning and booking your
@@ -75,10 +77,12 @@
                     </p>
                 </div>
             </div>
-        
+
             <h1 class="sub-heading2">What we mean by Sustainable Travel</h1>
             <div id="Parts2">
-                <div class="first"><img src="/Images/Money-Illustration.svg" alt="This is Image" class="travel-img2">
+                <div class="first"><img
+                        src="https://raw.githubusercontent.com/Muhammad-Zain01/TravelAgencyWeb.github.io/c55ff923bf5f1a2d5b3045ca28cfdbe3db1a0004/Images/Money-Illustration.svg"
+                        alt="This is Image" class="travel-img2">
                 </div>
                 <div class="second">
                     <p class="text-about">Travel is one of life's greatest pleasures. And we want each generation to be
@@ -99,7 +103,7 @@
                     </p>
                 </div>
             </div>
-          
+
 
 
         </section>
@@ -137,7 +141,7 @@
                     <a href="#" class='cont-link'>voe@constellationhbs.com </a><br><br>
 
                     <p class="sub"> Additional Office Locations
-                    </p>                    Germany
+                    </p> Germany
                     Torstr. 231, Vorderhaus, 1. OG, 10115 Berlin
 
 
@@ -147,16 +151,19 @@
                     <p class="contact-heading font">Contact Us</p>
                     <p class="input-label white-inline">Name:- </p><input type="text" placeholder="Enter Your Name"
                         class="input-variable" id="Name"><br>
-                    <p class="input-label white-inline">Phone Number:- </p><input type="number" placeholder="Enter Your Name"
-                        class="input-variable">
+                    <p class="input-label white-inline">Phone Number:- </p><input type="number"
+                        placeholder="Enter Your Name" class="input-variable">
                     <br>
                     <label for="class">
-                        <p class="input-label white-inline">Class:- </p><input type="radio" name="First Class" id="class"
-                            class="input-variable"><p class="white-inline">First Class</p> 
+                        <p class="input-label white-inline">Class:- </p><input type="radio" name="First Class"
+                            id="class" class="input-variable">
+                        <p class="white-inline">First Class</p>
                     </label>
-                    <label for="class"><input type="radio" name="First Class" id="class" class="input-variable"><p class="white-inline"> Second
-                        Class</p></label>
-<br>
+                    <label for="class"><input type="radio" name="First Class" id="class" class="input-variable">
+                        <p class="white-inline"> Second
+                            Class</p>
+                    </label>
+                    <br>
                     <p class="input-label white-inline">Destination:- </p>
                     <select name="Destination" id="dest">
                         <option value="los-angeles">Los Angles</option>
@@ -170,7 +177,7 @@
                     <p class="input-label" id='msg-label'>Message:- </p>
                     <textarea name="Message" id="text-msg" cols="36" rows="10"
                         placeholder="Enter Your Message"></textarea>
-                        <input type="submit" id="submit-btn">
+                    <input type="submit" id="submit-btn">
                     </form>
                 </div>
             </div>
@@ -179,7 +186,9 @@
 
 
 
-    <footer id="footer"><p class="foot">All Copyright @ Reserved by 2030 </p></footer>
+    <footer id="footer">
+        <p class="foot">All Copyright @ Reserved by 2030 </p>
+    </footer>
     <script src="Script/script.js"></script>
 </body>
 
